# ASR-Coffee-OS

./: 01_read_bean.md  ASR_COFFEE_DECISION_AND_PROCESS_SYSTEM_CASE_STUDY.md  README.md  asr_coffee_os_onefile.py  drying_engine.py  experiment_designer.py  farmer_agent.py  farmer_cli.py  farmer_models.py  fermentation_engine.py  field_assessment.py  genesis_mind.py  greenbean.py  models.py  pyproject.toml  roast_physics.py  sensors.py  skynet_core.py
skills/: anaerobic_red_fruit.md  fix_under_dev.md
src/asr_coffee_os/: __init__.py  cli.py  codex.py  engine.py  models.py  physics.py  proof.py  roast_physics.py
src/asr_coffee_os/sensors/: artisan.py
tests/: test_physics.py
